# streamlit-template

./: .pre-commit-config.yaml  RAG_pipeline.py  README.md  data_processing.py  plotting.py  pyproject.toml
deployment/test/: create_ressources.tf
src/: build_prompt.py  utils.py
streamlit/: 📊_Exploratory_Data_Analysis.py  📋 proposal_form_app.py  📋_proposal_form_app.py  🧩_Topic_Insights.py
