[project]
name = "ADC-CASE-STUDY"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "googletrans>=3.0.0",
    "graphviz>=0.20.3",
    "langid>=1.1.6",
    "matplotlib>=3.9.2",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "ruff>=0.6.9",
    "scikit-learn>=1.5.2",
    "streamlit>=1.39.0",
    "wordcloud>=1.9.3",
]
